# sigeye

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindFFTW.cmake  FindGTK3.cmake  FindJSONGLIB.cmake  FindLiquid.cmake  FindLuaJIT.cmake  FindSQLite3.cmake
src/: CMakeLists.txt  sigeye.c  sigeye.h  sigeye_noodle.c  sigeye_noodle.h
src/decoders/: CMakeLists.txt
src/dsp/: CMakeLists.txt  spectrogram.c  spectrogram.h
src/fec/: CMakeLists.txt
src/graphics/: CMakeLists.txt  shader.c  shader.h  shader_program.c  shader_program.h
src/io/: CMakeLists.txt  base_file.c  base_file.h  data_types.h  sample_capture.c  sample_capture.h  wav_file.h
src/resources/shaders/: simple.f.glsl  simple.v.glsl
src/resources/ui/: sigeye_analysis.glade  sigeye_noodle.glade  sigeye_spectrum.glade
tests/: CMakeLists.txt  test_graphics.c  test_io.c
